@@ -165,26 +165,32 @@ switch ($activeTab) {
 				}
 				
 				$message = '';
-				if ($name_modules[0] == '0')
-					$message .= process_wizard_add ($id_agents, $image, $idVisualConsole, $range, $width, $height);
-				else{
-					$id_modules = array();
-					$cont_dest = 1;
-					$cont_mod = 1;
-					foreach($name_modules as $mod){
-						$cont_ag = 1;
-						foreach($id_agents as $ag){
-							$sql = "SELECT id_agente_modulo FROM tagente_modulo WHERE delete_pending = 0 AND id_agente = ".$ag." AND nombre = '".$mod."'";
-							$result = get_db_row_sql ($sql);
-							$id_modules[$cont_dest] = $result['id_agente_modulo'];
-							$cont_ag = $cont_ag + 1;
-							$cont_dest = $cont_dest + 1;
-						}
-						$cont_mod = $cont_mod + 1;
-					}
-					$message .= process_wizard_add_modules ($id_modules, $image, $idVisualConsole, $range, $width, $height);
+				
+				if (empty($name_modules)) {
+					$statusProcessInDB = array('flag' => true, 'message' => print_error_message (__('No modules selected'), '', true));
 				}
-				$statusProcessInDB = array('flag' => true, 'message' => $message);
+				else {
+					if ($name_modules[0] == '0')
+						$message .= process_wizard_add ($id_agents, $image, $idVisualConsole, $range, $width, $height);
+					else{
+						$id_modules = array();
+						$cont_dest = 1;
+						$cont_mod = 1;
+						foreach($name_modules as $mod){
+							$cont_ag = 1;
+							foreach($id_agents as $ag){
+								$sql = "SELECT id_agente_modulo FROM tagente_modulo WHERE delete_pending = 0 AND id_agente = ".$ag." AND nombre = '".$mod."'";
+								$result = get_db_row_sql ($sql);
+								$id_modules[$cont_dest] = $result['id_agente_modulo'];
+								$cont_ag = $cont_ag + 1;
+								$cont_dest = $cont_dest + 1;
+							}
+							$cont_mod = $cont_mod + 1;
+						}
+						$message .= process_wizard_add_modules ($id_modules, $image, $idVisualConsole, $range, $width, $height);
+					}
+					$statusProcessInDB = array('flag' => true, 'message' => $message);
+				}
 				$action = 'edit';
 				break;
 		}
